# Comfyui_StoryMem

./: .gitignore  .gitmodules  CHANGELOG.md  EXAMPLES.md  INTEGRATION.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  test_memory.py
.github/workflows/: publish.yml  test.yml
configs/: model_config.yaml
nodes/: __init__.py  loader_nodes.py  memory_nodes.py  shot_nodes.py  utility_nodes.py
scripts/: download_models.py
storymem_src/: .gitignore  README.md  __init__.py  extract_keyframes.py  generate.py  pipeline.py  requirements.txt  run_example.sh
storymem_src/story/: artist.json  astronaut.json  bean.json  black.json  cat.json  daiyu.json  dog.json  elon.json  explorer.json  gump.json  harry.json  jane.json  japan.json  jobs.json  little_prince.json  little_sheldon.json  mermaid.json  monkey_king.json  neo.json  phd.json  princess.json  qin.json  queen.json  robinson.json  robot.json  sama_gpu.json  santa.json  superman.json  titanic.json  vangogh.json
storymem_src/wan/: __init__.py  image2video.py  memory2video.py  text2video.py
storymem_src/wan/configs/: __init__.py  wan_m2v_A14B.py
storymem_src/wan/modules/: vae2_1.py
storymem_wrapper/: __init__.py  keyframe_extractor.py  memory_manager.py  model_loader.py  shot_generator.py  storymem_bridge.py  tensor_utils.py
tests/: README.md  __init__.py  test_imports.py
workflows/: README.md  test_workflow_3shot_story.json  test_workflow_simple.json
