[project]
name = "storymem"
description = "Custom ComfyUI nodes for StoryMem - Multi-shot long video storytelling with memory-conditioned video diffusion models."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "numpy>=1.23.5,<2",
    "diffusers==0.32.2",
    "transformers==4.45.2",
    "peft==0.14.0",
    "tokenizers>=0.20.3",
    "accelerate>=1.1.1",
    "opencv-python>=4.9.0.80",
    "imageio[ffmpeg]",
    "av",
    "matplotlib",
    "tensorboard",
    "typing_extensions",
    "tqdm",
    "easydict",
    "json5",
    "ftfy",
    "protobuf",
    "click",
    "pillow",
    "huggingface_hub[cli]>=0.20.0",
]

[project.optional-dependencies]
decord = ["decord"]  # Optional: Not available on macOS ARM64 with Python 3.12+

[project.urls]
Repository = "https://github.com/anveshane/Comfyui_StoryMem"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/anveshane/Comfyui_StoryMem/wiki"
"Bug Tracker" = "https://github.com/anveshane/Comfyui_StoryMem/issues"

[tool.comfy]
PublisherId = "anveshane"
DisplayName = "Comfyui_StoryMem"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

